fix weird styling by deactivating padding on main before collapse

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ ul li::before {
 }
 
 
-main {
+main .active{
     padding: 0px 40px 40px 40px; 
 }
 
